Fixing backend I think

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         class="stop-image"
         src="img/drunk-santa.jpg"
         alt="Venue photo"
+        onerror="this.onerror=null; this.src='img/drunk-santa.jpg';"
         />
       <!-- Left side info -->
       <div class="stop-info">
@@ -218,7 +219,7 @@
 <section class="next-card">
   <div class="next-card-left">NEXT STOP:</div>
   <div class="next-card-right">
-    <p><span id="nextName"></span>(<span id="nextAddress"></span>)</p>
+    <p><span id="nextName"></span><br>(<span id="nextAddress"></span>)</p>
   </div>
 </section>
 
