--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     /* Left image */
     .stop-image {
     width: 100%;          /* or 64px */
+    aspect-ratio: 1 / 1;
     object-fit: cover;
     border: 2px solid white;
     box-shadow: inset 1px 1px 0 #ddd, inset -1px -1px 0 #999;
